fix(web): whitespace:nowrap on anchor container.

--- a/web/src/components/link/link.component.scss
+++ b/web/src/components/link/link.component.scss
@@ -39,6 +39,7 @@
   max-width: 285px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 
   @include mixins.mobile {
     max-width: 205px;
